started migration to new aiida version, changed aiida version in steup.json, added .DS_Store files to gitignore and deleted them from git repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+.pytest_cache/
 *.py[cod]
 *$py.class
 
@@ -105,3 +106,10 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# mac stuff
+.DS_Store
+**/.DS_Store
+.AppleDouble
+.LSOverride
+
