--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:  # copied from pgtest's travis.yml
     - sudo apt-get install locate
     - sudo service postgresql stop
     - sudo apt-get remove postgresql
-    - sudo apt-get install postgresql
+    - sudo apt-get install postgresql-9.5
     - sudo updatedb
 
 install:
