--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,34 @@
 dist: trusty
-#sudo: required
 language: python
-
 python: 2.7
-
 notifications:
   slack:
     on_success: never
-
 services:
-    - postgresql
-    - rabbitmq
-
+- postgresql
+- rabbitmq
 addons:
-    postgresql: "9.5"
-
+  postgresql: '9.5'
 cache: pip
-
-before_install:  # copied from pgtest's travis.yml
-    - sudo apt-get install locate
-    - sudo service postgresql stop
-    - sudo apt-get remove postgresql
-    - sudo apt-get install postgresql-9.5
-    - sudo updatedb
-
+before_install:
+- openssl aes-256-cbc -K $encrypted_6bf0778859c5_key -iv $encrypted_6bf0778859c5_iv
+  -in id_rsa_travis.enc -out id_rsa_travis -d
+- sudo apt-get install locate
+- sudo service postgresql stop
+- sudo apt-get remove postgresql
+- sudo apt-get install postgresql-9.5
+- sudo updatedb
 install:
-    - pip install -U pip wheel setuptools
-    - pip install -e git+https://github.com/aiidateam/aiida_core@develop#egg=aiida-core[testing]
-    - pip install -e git+https://github.com/JuDFTteam/masci-tools@master#egg=masci-tools
-    - pip install -e .
-    - pip install codecov
-
+- pip install -U pip wheel setuptools
+- pip install -e git+https://github.com/aiidateam/aiida_core@develop#egg=aiida-core[testing]
+- pip install -e git+https://github.com/JuDFTteam/masci-tools@master#egg=masci-tools
+- pip install -e .
+- pip install codecov
 env:
-    - TEST_TYPE="unittests"
-
-script: 
-    - cd ./aiida_kkr/tests/ && ./run_all.sh
-
+- TEST_TYPE="unittests"
+script:
+- cd ./aiida_kkr/tests/ && ./run_all.sh
 after_success:
-    - codecov
-
+- codecov
 git:
   depth: 3
