--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,33 @@ install:
 env:
 - TEST_TYPE="unittests"
 script:
+# run tests without running KKR codes
 - cd ./aiida_kkr/tests/ && ./run_all.sh
 - cd ../../
-#- mkdir -m 700 ~/.ssh/
+#
+# Now clone JuKKR repository and build codes
 - mv id_rsa_travis ~/.ssh/id_rsa 
 - chmod 400 ~/.ssh/id_rsa
 - echo "iffgit.fz-juelich.de,134.94.161.83 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBH2UDrT0bZP+WmJGGbtLPtFyC5FgQgOM1XvVJ6u5XBJrYMnKNVb9jAttL+k8VvDgcK6b3dFJnvt7eiXtG/hnqCo=" >> ~/.ssh/known_hosts
-- git clone gitlab@iffgit.fz-juelich.de:kkr/jukkr.git
+- git clone --depth 1 gitlab@iffgit.fz-juelich.de:kkr/jukkr.git
+- ls; pwd
+- cd jukkr/
+# build voronoi code
+- ./install.py --program=voronoi --compiler=gfortran --parallelization=serial
+- cd build/ && make && cp voronoi.exe ../
+- cd ..
+# build kkrhost code
+- ./install.py --program=kkrhost --compiler=gfortran --parallelization=serial
+- cd build/ && make && cp kkr.x ../
+- cd ..
+# build kkrimp code
+- ./install.py --program=kkrimp --compiler=gfortran --parallelization=serial
+- cd build/ && make && cp kkrflex.exe ../
+- cd ..
+#
+# Now run tests that need the code to be executed
+- cd ..
+# ... to come
 after_success:
 - codecov
 git:
