--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ script:
 #- cd ..
 #
 # Now run all tests
-- cd ./aiida_kkr/tests/ && ./run_all.sh
+- pwd; cd ../aiida_kkr/tests/ && ./run_all.sh
 allow_failures:
   - pytest -s --cov-report=term-missing --cov=aiida_kkr -k Test_dos_workflow
   - pytest -s --cov-report=term-missing --cov=aiida_kkr -k Test_gf_writeout_workflow
