Fix bumpversion settings

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,13 +14,13 @@ values =
 	release
 
 [bumpversion:file:pyproject.toml]
-search = version = {current_version}
-replace = {new_version}
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:setup.json]
-search = "version": {current_version}
-replace = {new_version}
+search = "version": "{current_version}"
+replace = "version": "{new_version}"
 
 [bumpversion:file:aiida_kkr/__init__.py]
-search = __version__ = {current_version}
-replace = {new_version}
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
