--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.0.0
+current_version = 1.0.1-dev
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
@@ -24,3 +24,4 @@ replace = "version": "{new_version}"
 [bumpversion:file:aiida_kkr/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
+
