--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel", "aiida-core==1.0.0a4"]
 
 [tool.poetry]
 name = "aiida-kkr"
-version = "1.0.0"
+version = "1.0.1-dev"
 description = "AiiDA plugin for the KKR code"
 authors = ["Philipp Rüssmann <p.ruessmann@fz-juelich.de>"]
 license = "MIT"
