--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "aiida-core==1.0.0a4"]
+requires = ["setuptools", "wheel"]
 
 [tool.poetry]
 name = "aiida-kkr"
@@ -7,7 +7,30 @@ version = "1.0.1-dev"
 description = "AiiDA plugin for the KKR code"
 authors = ["Philipp Rüssmann <p.ruessmann@fz-juelich.de>"]
 license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/JuDFTteam/aiida-kkr"
+repository = "https://github.com/JuDFTteam/aiida-kkr"
+documentation = "https://aiida-kkr.readthedocs.io"
+keywords = ["material science",
+            "plots",
+            "visualization",
+            "aiida",
+            "dft"]
+classifiers = ["Development Status :: 4 - Beta",
+               "Intended Audience :: Science/Research",
+               "License :: OSI Approved :: MIT License",
+               "Programming Language :: Python :: 2.7",
+               "Environment :: Plugins",
+               "Natural Language :: English",      
+               "Topic :: Scientific/Engineering :: Physics"]
 
 [tool.poetry.dependencies]
-python = "^2.7"
 aiida-core = "1.0.0a4"
+python = "^2.7"
+masci-tools = "*"
+seekpath = "*"
+pgtest = "*"
+pytest-cov = "^2.5.0"
+sphinx = "*"
+sphinx_rtd_theme = "*"
+bumpversion = "*"
