Fix tests, add ase to depdendecy list

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_install:
 - sudo updatedb
 install: # python installations
 - pip install -U pip wheel setuptools
+# at the moment need to install masci-tools manually since it is not uploaded to pypi yet
+- pip install -e git+https://github.com/JuDFTteam/masci-tools@master#egg=masci-tools.git
 - pip install -e .
 - pip install codecov
 env:
