--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ allow_failures:
 after_success:
 - codecov
 #deploy to pypi
-#- pip install poetry && poetry publish --build -u XXXXX -p XXXXXX
+- cd ../../ && rm -rf aiida_kkr/tests/{submit_test/,__pycache__/,jukkr} #remove test output before publishing
+- pip install poetry && poetry publish --build < pypi_credentials
 git:
   depth: 3
