--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,6 @@ after_success:
 - codecov
 #deploy to pypi
 - cd ../../ && rm -rf aiida_kkr/tests/{submit_test/,__pycache__/,jukkr} id_rsa_travis #remove test output before publishing
-- pip install poetry && poetry publish --build < pypi_credentials
+- pip install poetry && ./publish_to_pypi.sh
 git:
   depth: 3
