--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,17 +5,19 @@ requires = ["setuptools", "wheel"]
 name = "aiida-kkr"
 version = "1.1.2"
 description = "AiiDA plugin for the KKR code"
-authors = ["Philipp Rüssmann <p.ruessmann@fz-juelich.de>"]
+authors = ["Philipp Rüssmann <p.ruessmann@fz-juelich.de>",
+           "Jens Bröder <j.broeder@fz-juelich.de>",
+           "Fabian Bertoldo <f.bertoldo@fz-juelich.de>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/JuDFTteam/aiida-kkr"
 repository = "https://github.com/JuDFTteam/aiida-kkr"
 documentation = "https://aiida-kkr.readthedocs.io"
 keywords = ["material science",
-            "plots",
-            "visualization",
             "aiida",
-            "dft"]
+            "dft",
+            "all-electron",
+            "kkr"]
 classifiers = ["Development Status :: 4 - Beta",
                "Intended Audience :: Science/Research",
                "License :: OSI Approved :: MIT License",
