Fix some workflow tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,7 @@ script:
 # Now run all tests
 - pwd && ./run_all.sh
 allow_failures:
-  - pytest -s --cov-report=term-missing --cov=aiida_kkr --ignore=jukkr -k Test_gf_writeout_workflow
-  - pytest -s --cov-report=term-missing --cov=aiida_kkr --ignore=jukkr -k Test_vorostart_workflow
-  - pytest -s --cov-report=term-missing --cov=aiida_kkr --ignore=jukkr -k Test_scf_workflow
+  # so far these fail because kkrimp does not work properly with gfortran
   - pytest -s --cov-report=term-missing --cov=aiida_kkr --ignore=jukkr -k Test_kkrimp_scf_workflow
   - pytest -s --cov-report=term-missing --cov=aiida_kkr --ignore=jukkr -k Test_kkrimp_full_workflow
 
