--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
   postgresql: '9.5'
   apt: # copied from wannier90's travis.yml
     packages:
-      - gfortran
+      - gfortran-8
       - libblas-dev
       - liblapack-dev
 cache: pip
@@ -43,7 +43,8 @@ script:
 # clone the code and install
 - cd aiida_kkr/tests && ./jukkr_installation.sh
 # Now run all tests
-- travis_wait 30 ./run_all.sh
+- ./run_all.sh
+#- travis_wait 30 ./run_all.sh
 allow_failures:
   # so far these fail because kkrimp does not work properly with gfortran
   - pytest -s --cov-report=term-missing --cov=aiida_kkr --ignore=jukkr -k Test_kkrimp_scf_workflow
