--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
   postgresql: '9.5'
   apt: # adapted from wannier90's travis.yml
     packages:
-      - gfortran-5
+      - gfortran
       - libblas-dev
       - liblapack-dev
 cache: pip
