--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
 # now unpack the secrets (pypi_credentials and ssh key to download the KKR code
 - tar -zxvf secrets.tar.gz && rm secrets.tar.gz
 # Now we install the needed dependencies
-- sudo apt-get update && sudo apt-get upgrade && sudo apt-get install software-properties-common -y && sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y && sudo apt-get update && sudo apt-get install gfortran-8 -y && sudo apt-get update
+#- sudo apt-get update && sudo apt-get upgrade && sudo apt-get install software-properties-common -y && sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y && sudo apt-get update && sudo apt-get install gfortran-8 -y && sudo apt-get update
 - sudo apt-get install locate
 - sudo service postgresql stop
 - sudo apt-get remove postgresql
@@ -44,9 +44,9 @@ script:
 - echo "iffgit.fz-juelich.de,134.94.161.83 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBH2UDrT0bZP+WmJGGbtLPtFyC5FgQgOM1XvVJ6u5XBJrYMnKNVb9jAttL+k8VvDgcK6b3dFJnvt7eiXtG/hnqCo=" >> ~/.ssh/known_hosts
 # clone the code and install
 - cd aiida_kkr/tests && ./jukkr_installation.sh
-# First check if rabbitmq communication is working
-- ./check_pika-rabbitmq.py | tee out_rmq_check
-- ./verify_rmq_check.py
+## First check if rabbitmq communication is working
+#- ./check_pika-rabbitmq.py | tee out_rmq_check
+#- ./verify_rmq_check.py
 # Then run all tests
 - ./run_all.sh
 #- travis_wait 30 ./run_all.sh
