add tests for plot_kkr

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ masci-tools = "*"
 seekpath = "*"
 pgtest = "*"
 pytest-cov = "^2.5.0"
+pytest-mpl = "*"
 sphinx = "*"
 sphinx_rtd_theme = "*"
 bumpversion = "*"
