--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@
 dist: trusty
 language: python
 python:
-  - 2.7
-  - 3.5
+  - "2.7"
+  - "3.5"
   allow_failure:
-    - 3.5
+    - python: "3.5"
 notifications:
   slack:
     on_success: never
