--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,18 @@
 dist: trusty
 language: python
 python:
+  - "2.6"
   - "2.7"
+  - "3.3"
+  - "3.4"
   - "3.5"
+  - "3.6"
 matrix:
   allow_failure:
+    - python: "3.3"
+    - python: "3.4"
     - python: "3.5"
+    - python: "3.6"
 notifications:
   slack:
     on_success: never
