Fix travis settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ python:
   - "3.5"
   - "3.6"
 matrix:
-  allow_failure:
+  # mark build as complete as soon as the versions that may not fail is finished
+  fast_finish: true
+  # these environment so far are allowed to fail
+  allow_failures:
+    - python: "2.6"
     - python: "3.3"
     - python: "3.4"
     - python: "3.5"
