--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ classifiers = ["Development Status :: 4 - Beta",
                "License :: OSI Approved :: MIT License",
                "Programming Language :: Python :: 2.7",
                "Environment :: Plugins",
-               "Natural Language :: English",      
+               "Natural Language :: English",
                "Topic :: Scientific/Engineering :: Physics"]
 
 [tool.poetry.dependencies]
-aiida-core = "1.0.0a4"
+aiida-core = "^1.0.0b1"
 python = "^2.7"
 masci-tools = "*"
 seekpath = "*"
@@ -39,4 +39,3 @@ sphinx_rtd_theme = "*"
 bumpversion = "*"
 ase = "*"
 timeout_decorator = "*"
-
