Replace timeout-decorator dependency by pytest-timeout plugin for pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,8 @@ seekpath = "*"
 pgtest = "*"
 pytest-cov = "^2.5.0"
 pytest-mpl = "*"
+pytest-timeout = "*"
 sphinx = "*"
 sphinx_rtd_theme = "*"
 bumpversion = "*"
 ase = "*"
-timeout_decorator = "*"
