--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = ["Development Status :: 4 - Beta",
 [tool.poetry.dependencies]
 aiida-core = "^1.0.0b1"
 python = "^2.7"
-masci-tools = "*"
+masci-tools = "^0.3.1
 seekpath = "*"
 pgtest = "*"
 pytest-cov = "^2.5.0"
