--- a/.travis.yml
+++ b/.travis.yml
@@ -62,16 +62,10 @@ script:
   ## First check if rabbitmq communication is working
   #- ./check_pika-rabbitmq.py | tee out_rmq_check
   #- ./verify_rmq_check.py
+  # choose tests to run via environment variables:
+  - export RUN_VORONOI='yes' 
   # Then run all tests
   - ./run_all.sh
-  #- travis_wait 30 ./run_all.sh
-  # these tests fail at the moment because gfortran is too old
-  #- pytest --cov-report=term-missing --cov-append --cov=aiida_kkr --ignore=jukkr -k Test_dos_workflow
-  #- pytest --cov-report=term-missing --cov-append --cov=aiida_kkr --ignore=jukkr -k Test_gf_writeout_workflow
-  #- pytest --cov-report=term-missing --cov-append --cov=aiida_kkr --ignore=jukkr -k Test_scf_workflow
-  # these are fail because gfortran compilation of kkrimp does not work
-  #- pytest --cov-report=term-missing --cov-append --cov=aiida_kkr --ignore=jukkr -k Test_kkrimp_scf_workflow
-  #- pytest --cov-report=term-missing --cov-append --cov=aiida_kkr --ignore=jukkr -k Test_kkrimp_full_workflow
 after_success:
   - codecov
   #deploy to pypi using poetry
