--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,6 @@ python:
 matrix:
   # mark build as complete as soon as the versions that may not fail is finished
   fast_finish: true
-  # these environment so far are allowed to fail
-  allow_failures:
-    - python: "3.4"
-    - python: "3.5"
-    - python: "3.6"
 notifications:
   slack:
     on_success: never
@@ -65,7 +60,7 @@ script:
   # choose tests to run via environment variables:
   - export RUN_VORONOI='yes' 
   # Then run all tests
-  - ./run_all.sh
+  - bash ./run_all.sh
 after_success:
   - codecov
   #deploy to pypi using poetry
