--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,8 @@ before_install:
 install: # python installations
   - pip install -U pip wheel setuptools
   - pip install pip==18.1
-  # at the moment need to install masci-tools manually since it is not uploaded to pypi yet
-  - pip install -e git+https://github.com/JuDFTteam/masci-tools@develop#egg=masci-tools.git
-  - pip install -e git+https://github.com/aiidateam/aiida_core.git@cc38745125f6c54325fbef3f9b7d30876ab57ea8#egg=aiida_core
+  # at the moment we take this branch which fixes issues encountered in aiida-core due to byte read/write and python2/3 issues
+  - pip install -e git+https://github.com/PhilippRue/aiida_core.git@5d9051124a14fdff8bc79f4bde953f598603d614#egg=aiida_core
   - pip install -e .
   - reentry scan
   - pip install codecov
