--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
 matrix:
   # mark build as complete as soon as the versions that may not fail is finished
   fast_finish: true
+  include:
+    - python: 3.7
+      dist: xenial
 notifications:
   slack:
     on_success: never
