--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "wheel"]
 
 [tool.poetry]
 name = "aiida-kkr"
-version = "1.1.8-dev"
+version = "1.1.9-dev"
 description = "AiiDA plugin for the KKR code"
 authors = ["Philipp Rüssmann <p.ruessmann@fz-juelich.de>",
            "Jens Bröder <j.broeder@fz-juelich.de>",
@@ -29,7 +29,7 @@ classifiers = ["Development Status :: 4 - Beta",
 [tool.poetry.dependencies]
 aiida-core = "^1.0.0b5"
 python = "^2.7"
-masci-tools = "^0.3.8"
+masci-tools = "^0.3.9-dev"
 seekpath = "*"
 pgtest = "*"
 pytest-cov = "^2.5.0"
