--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,15 @@ classifiers = ["Development Status :: 4 - Beta",
                "Intended Audience :: Science/Research",
                "License :: OSI Approved :: MIT License",
                "Programming Language :: Python :: 2.7",
+               "Programming Language :: Python :: 3",
+               "Programming Language :: Python :: 3.4",
+               "Programming Language :: Python :: 3.5",
+               "Programming Language :: Python :: 3.6",
+               "Programming Language :: Python :: 3.7",
                "Environment :: Plugins",
                "Natural Language :: English",
-               "Topic :: Scientific/Engineering :: Physics"]
+               "Topic :: Scientific/Engineering :: Physics",
+               "Framework :: AiiDA"]
 
 [tool.poetry.dependencies]
 aiida-core = "^1.0.0b6"
