--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,28 @@ ENV/
 .AppleDouble
 .LSOverride
 
+# VScode
+.idea/
+aiida_kkr/.vscode/
+
+# testing files (test runs locally)
+aiida_kkr/tests/.aiida/
+aiida_kkr/tests/inputcard*
+aiida_kkr/tests/jukkr/
+aiida_kkr/tests/meminfo.txt
+aiida_kkr/tests/out*
+aiida_kkr/tests/shapefun
+aiida_kkr/tests/submit_test/
+aiida_kkr/tests/test.sh
+aiida_kkr/tests/test_pot*
+aiida_kkr/tests/venv_test_new/
+aiida_kkr/tests/workflows/jukkr/
+aiida_kkr/tests/workflows/test
+
+# additional things
+id_rsa_travis
+pip-wheel-metadata/
+poetry.lock
+publish_to_pypi.sh
+secrets.tar.gz
+
