Fix type in travis rabbit-mq install

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
       #- gfortran
       #- libblas-dev
       #- liblapack-dev
-      - rabitmq-server
+      - rabbitmq-server
 cache: pip
 before_install:
   # this decripts the secrets tar ball
