--- a/.travis.yml
+++ b/.travis.yml
@@ -50,13 +50,13 @@ script:
   ## First check if rabbitmq communication is working
   #- ./check_pika-rabbitmq.py | tee out_rmq_check
   #- ./verify_rmq_check.py
-  - verdi status
+  #- verdi status # no profile set up
   # choose tests to run via environment variables:
   #- export RUN_VORONOI='yes' 
   #- export RUN_KKRHOST='yes' 
   - export RUN_ALL='yes'
   # Then run all tests
-  - bash ./run_all.sh
+  - bash ./run_all.sh -v
 after_success:
   - codecov
   #deploy to pypi using poetry
