--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ before_install:
   - sudo updatedb
 install: # python installations
   - pip install -U pip wheel setuptools
+  - pip install -U pytest
   - pip install -e .
   - reentry scan
   - pip install codecov
@@ -70,7 +71,7 @@ script:
   #- export RUN_KKRHOST='yes' 
   - export RUN_ALL='yes'
   # Then run all tests
-  - bash ./run_all.sh -v
+  - bash ./run_all.sh
 after_success:
   - codecov
   #deploy to pypi using poetry
