Add reentry scan to github ci action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
     - name: Install aiida-kkr
       run: |
         pip install .
+        reentry scan
+        pip freeze
 
     - name: Run pytest
       run: |
