iAdd aiida-testing to testing extras

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
 
     - name: Install aiida-kkr
       run: |
-        pip install .
+        pip install .[testing]
         reentry scan
         pip freeze
 
