Activate and fix non-workflow tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
         touch jukkr/voronoi.exe && chmod +x jukkr/voronoi.exe
         touch jukkr/kkrflex.exe && chmod +x jukkr/kkrflex.exe
         # run all (tools, calculations, workflows) tests using caching of the results
-        export RUN_ALL='yes'
+        # with run all tests except the workflows
         ./run_all.sh
-
+        # then run the workflows
+        #SKIP_NOWORK='yes' RUN_VORONOI='yes' RUN_KKRHOST='yes' RUN_KKRIMP='yes' ./run_all
